@@ -1,5 +1,5 @@
 Bug fixes:
-  - Romve the small random lava patches
+  + Romve the small random lava patches - See noise expression offset_vulcano - Check seed 379334167
   - Add back gleba water (wetland-blue-slime and gleba-deep-lake) and surround them by a land tile such that they do not touch nauvis water. I think without them gleba might have some solid terrain without plants
   - Show solar system view button in Map view
 
